--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
                         <phase>generate-resources</phase>
                         <configuration>
                             <environmentVariables>
-                                <NODE_ENV>developer</NODE_ENV>
+                                <NODE_ENV>prod</NODE_ENV>
                             </environmentVariables>
                         </configuration>
                     </execution>
