--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,14 @@
             <artifactId>mybatis</artifactId>
             <version>3.5.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-catalina -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>8.5.51</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>AppLister</finalName>
@@ -140,7 +148,7 @@
                         <phase>generate-resources</phase>
                         <configuration>
                             <environmentVariables>
-                                <NODE_ENV>prod</NODE_ENV>
+                                <NODE_ENV>dev</NODE_ENV>
                             </environmentVariables>
                         </configuration>
                     </execution>
